--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ nav {
   display: flex;
   align-items: center;
   text-align: center;
-  color: #6070FF;
+  color: #6070ff;
   text-decoration: none;
 }
 
@@ -47,20 +47,18 @@ section {
 .title {
   max-width: 450px;
   height: 150px;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
   display: flex;
   align-items: center;
-  color: #172B4D;
+  color: #172b4d;
   padding: 0 24px;
 }
 
-
-
-.more-info  {
+.more-info {
   max-width: 397px;
   height: 146px;
   font-family: 'Poppins', sans-serif;
@@ -80,7 +78,7 @@ section {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7F8CFF;
+  color: #7f8Cff;
   padding: 0 24px;
 }
 
