--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ section {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
-  color: #7f8Cff;
+  color: #7f8cff;
   padding: 0 24px;
 }
 
