--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@font-face {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJbecmNE.woff2) format('woff2');
+  unicode-range: U+0900-097F, U+1CD0-1CF6, U+1CF8-1CF9, U+200C-200D, U+20A8, U+20B9, U+25CC, U+A830-A839, U+A8E0-A8FB;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -13,7 +22,7 @@ nav {
   display: flex;
   justify-content: space-between;
   height: 100px;
-  padding: 50px 24px;
+  padding: 10px 24px;
 }
 
 .logo {
