--- a/style.css
+++ b/style.css
@@ -208,13 +208,15 @@ nav {
   color: #344563;
 }
 
-.languagess {
+.languagess ul {
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 290px;
   height: 24px;
   gap: 12px;
+  list-style-type: none;
+  margin-left: -15px;
 }
 
 .html button {
@@ -231,6 +233,7 @@ nav {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
+  border-color: #ebebff;
   color: #6070ff;
 }
 
