--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ nav {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
+  border-color: #ebebff;
   color: #6070ff;
 }
 
@@ -276,6 +277,7 @@ nav {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
+  border-color: #ebebff;
   color: #6070ff;
 }
 
@@ -292,7 +294,7 @@ nav {
   gap: 10px;
   width: 124px;
   height: 48px;
-  border: 1px solid #6070ff;
+  border: 1px solid #dfe1e6;
   border-radius: 8px;
   background-color: #fff;
   font-style: normal;
