--- a/style.css
+++ b/style.css
@@ -306,6 +306,15 @@ nav {
   color: #396df2;
 }
 
+.submit button:hover {
+  background-color: #6070ff;
+  color: #fff;
+  border: 1px solid #7f8cff;
+  box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+  transition-property: background-color;
+  transition-duration: 0.8s;
+}
+
 .all-about {
   height: 1000px;
   background-color: #fff;
