--- a/style.css
+++ b/style.css
@@ -734,7 +734,8 @@ nav {
     height: 24px;
   }
 
-  #left1, #left2 {
+  #left1,
+  #left2 {
     display: flex;
     flex-direction: row-reverse;
   }
@@ -956,12 +957,6 @@ nav {
     text-align: center;
   }
 
-  #tit1 h3 {
-    width: 496px;
-    font-weight: 700;
-    font-size: 40px;
-  }
-  
   .form-title h3 {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
@@ -969,6 +964,12 @@ nav {
     line-height: 52px;
     color: #fff;
     text-align: center;
+  }
+
+  #tit1 h3 {
+    width: 496px;
+    font-weight: 700;
+    font-size: 40px;
   }
 
   .form-description {
