--- a/style.css
+++ b/style.css
@@ -66,8 +66,7 @@ nav {
   gap: 40px;
   background-color: #fff;
   border-bottom-left-radius: 45px;
-  padding-left: 80px;
-  padding-top: 150px;
+
 }
 
 .title {
@@ -537,6 +536,15 @@ nav {
   color: #cfd8dc;
 }
 
+.right-obj {
+  width: 350px;
+  margin-left: 80px;
+}
+
+.left-obj {
+  width: 370px;
+  margin-left: 80px;
+}
 @media screen and (max-device-width: 768px) {
   .reach {
     display: none;
@@ -606,6 +614,7 @@ nav {
 @media screen and (min-device-width: 768px) {
   body {
     max-width: 100%;
+    width: 1440px;
   }
 
   main {
@@ -615,7 +624,9 @@ nav {
     align-items: center;
     gap: 160px;
     width: 100%;
-    padding: 0;
+    padding-right: 0;
+    padding-top: 0;
+    padding-left: 120px;
     margin: 0;
   }
 
